4 ejes tematicos ya

--- a/index.html
+++ b/index.html
@@ -18,14 +18,28 @@
 
     <main>
         <section id="ejes-tematicos">
-            <h2>Ejes Temáticos del Concurso</h2>
-            <p>Selecciona un eje para empezar a estudiar. ¡Recuerda que la prueba es el 14 de septiembre de 2025!</p>
-            <p>La calificación mínima para aprobar la prueba de Competencias Funcionales es de 65.00 puntos, con un peso del 60% en la evaluación final[cite: 185, 176].</p>
-            <ul>
-                <li><a href="temas/organizacion_territorial/organizacion_territorial.html">Organización Territorial</a></li>
-                <li><a href="temas/gestion_publica/gestion_publica.html">Gestión Pública Territorial</a></li>
-                </ul>
-        </section>
+    <h2>Ejes Temáticos del Concurso</h2>
+    <p>Selecciona un eje para empezar a estudiar. ¡Recuerda que la prueba es el 14 de septiembre de 2025!</p>
+    <p>La calificación mínima para aprobar la prueba de Competencias Funcionales es de 65.00 puntos, con un peso del 60% en la evaluación final.</p>
+    <ul>
+        <li>
+            <a href="temas/organizacion_territorial/organizacion_territorial.html">Organización Territorial</a>
+            <div id="historial-organizacion-territorial" class="historial-resumen"></div>
+        </li>
+        <li>
+            <a href="temas/gestion_publica/gestion_publica.html">Gestión Pública Territorial</a>
+            <div id="historial-gestion-publica" class="historial-resumen"></div>
+        </li>
+        <li>
+            <a href="temas/infraestructura_tic/infraestructura_tic.html">Infraestructura TIC</a>
+            <div id="historial-infraestructura-tic" class="historial-resumen"></div>
+        </li>
+        <li>
+            <a href="temas/soporte_tecnico/soporte_tecnico.html">Soporte Técnico</a>
+            <div id="historial-soporte-tecnico" class="historial-resumen"></div>
+        </li>
+        </ul>
+</section>
 
         <section id="resultados-simulacros" class="hidden">
             <h2>Resultados de tus Simulacros</h2>
