--- a/temas/organizacion_territorial/organizacion_territorial.html
+++ b/temas/organizacion_territorial/organizacion_territorial.html
@@ -18,17 +18,41 @@
 
     <main>
         <section class="contenido-estudio">
-            <h2>Estructura del Estado a nivel nacional, departamental y municipal</h2>
-            <p>
-                La Constitución Política de 1991 establece la estructura del Estado colombiano.
-                Es fundamental conocer los diferentes niveles y sus funciones para el concurso.
-                El Código de Integridad y el Modelo Integrado de Planeación y Gestión (MIPG) son conceptos esenciales[cite: 73, 74].
-            </p>
-            <p>
-                La Ley 909 de 2004 y el Decreto Único Reglamentario 1083 de 2015 son normas clave[cite: 129, 133].
-                Las entidades del orden territorial deben tener Manuales Específicos de Funciones y Competencias Laborales (MEFCL) vigentes para reportar la Oferta Pública de Empleos de Carrera (OPEC)[cite: 142].
-            </p>
-        </section>
+    <h2>Organización Territorial: Conceptos y Aplicación Práctica</h2>
+    <p>La organización territorial en Colombia se refiere a la forma en que el Estado se divide y estructura para ejercer sus funciones, garantizando la autonomía de sus entidades territoriales mientras mantiene la unidad de la nación[cite: 1, 3]. Para tu cargo, es esencial entender cómo la Alcaldía de Cajicá se inserta en este esquema y cómo se relaciona con otras entidades, como la Gobernación de Cundinamarca y el Gobierno Nacional[cite: 3].</p>
+
+    <h3>1. Fundamentos Constitucionales y Principios</h3>
+    <p>La **Constitución Política de 1991** es la norma principal que rige la organización territorial. Los principios clave son:</p>
+    <ul>
+        <li>**Estado unitario, descentralizado y con autonomía**: Colombia es una república unitaria, pero que delega poder a las entidades territoriales para que administren sus propios asuntos[cite: 1, 2, 3].</li>
+        <li>**Autonomía de las entidades territoriales**: Departamentos, distritos, municipios y territorios indígenas tienen la capacidad de gobernarse por autoridades propias, administrar sus recursos y ejercer sus competencias[cite: 1, 2, 3]. Para Cajicá, esto significa tomar decisiones sobre su Plan de Desarrollo y la gestión de sus recursos tecnológicos[cite: 3].</li>
+        <li>**Descentralización política y administrativa**: Desde 1986 se eligen popularmente a alcaldes y gobernadores, lo que fortalece la autonomía política. La descentralización administrativa transfiere competencias a estos niveles para hacer la gestión más eficiente y cercana a los ciudadanos[cite: 1, 3].</li>
+        <li>**Coordinación, concurrencia y subsidiaridad**: Estos principios regulan la relación entre la Nación y las entidades territoriales para trabajar de manera armónica[cite: 1, 2, 3].</li>
+    </ul>
+    
+    <h3>2. Niveles de la Estructura Territorial</h3>
+    <p>La organización se divide en los siguientes niveles[cite: 1, 2]:</p>
+    <ul>
+        <li>**Nivel Nacional**: El Gobierno Nacional establece las políticas generales, como la Política de Gobierno Digital del MinTIC[cite: 1, 3].</li>
+        <li>**Nivel Departamental**: Los departamentos (ej. Cundinamarca) son una unidad intermedia que coordinan los municipios y prestan apoyo técnico y financiero[cite: 1, 2].</li>
+        <li>**Nivel Municipal**: Los municipios (ej. Cajicá) son la base fundamental de la organización. Están a cargo de la prestación de servicios públicos, la planeación y el fomento del desarrollo local[cite: 1, 2]. Tu cargo se ubica en este nivel[cite: 3].</li>
+        <li>**Distritos y Territorios Indígenas**: Tienen regímenes especiales[cite: 1, 2].</li>
+    </ul>
+
+    <h3>3. Instrumentos de Planeación y Normatividad Clave</h3>
+    <p>Los proyectos de una entidad territorial deben estar alineados con sus instrumentos de planeación[cite: 1]:</p>
+    <ul>
+        <li>**Plan Nacional de Desarrollo**: Es la guía macro de las políticas públicas[cite: 1].</li>
+        <li>**Planes de Desarrollo Departamental y Municipal**: Definen los proyectos y metas a nivel local y deben articularse con el plan nacional[cite: 1]. El **Plan Estratégico de Tecnologías de la Información (PETI)** de Cajicá debe articularse con el Plan de Desarrollo Municipal[cite: 1].</li>
+        <li>**Plan de Ordenamiento Territorial (POT)**: Regula el uso del suelo y el desarrollo urbano[cite: 1].</li>
+    </ul>
+    <p>Tu rol en TIC se rige por leyes como la **Ley 136 de 1994** (Régimen Municipal) y la **Ley 1551 de 2012** (Fortalecimiento Municipal), que te otorgan la competencia de implementar políticas de gobierno digital y transparencia[cite: 1, 2]. Otras leyes importantes incluyen la **Ley 1454 de 2011** (Ley Orgánica de Ordenamiento Territorial) y la **Ley 1962 de 2019** (Regiones)[cite: 1, 2].</p>
+
+    <h3>4. Aplicación Práctica para tu Cargo</h3>
+    <p>Comprender la estructura territorial es esencial para tu rol. Debes saber cómo la Alcaldía de Cajicá, a través de la Secretaría de Tecnologías de la Información, opera de forma autónoma pero coordinada con las políticas del Gobierno Nacional (MinTIC)[cite: 1, 3].</p>
+    <p>Tu trabajo como profesional en TIC es clave en la **Estrategia de Gobierno Digital**, que busca fortalecer la transparencia, el acceso a la información y el control ciudadano. Conocer la normativa te permitirá apoyar decisiones sobre plataformas de gestión, trámites en línea y datos abiertos[cite: 1].</p>
+
+</section>
 
         <section class="seccion-simulacro">
             <h2>¡Pon a prueba tus conocimientos!</h2>
