--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
             <a href="temas/soporte_tecnico/soporte_tecnico.html">Soporte Técnico</a>
             <div id="historial-soporte-tecnico" class="historial-resumen"></div>
         </li>
+        <li>
+            <a href="temas/seguridad_informatica/seguridad_informatica.html">Seguridad Informática</a>
+            <div id="historial-seguridad-informatica" class="historial-resumen"></div>
+        </li>
+        <li>
+            <a href="temas/tecnologias_informacion_comunicaciones/tecnologias_informacion_comunicaciones.html">Tecnologías de la Información y Comunicaciones (TICS)</a>
+            <div id="historial-tecnologias-informacion-comunicaciones" class="historial-resumen"></div>
+        </li>
         </ul>
 </section>
 
