--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <section id="ejes-tematicos">
+ <section id="ejes-tematicos">
     <h2>Ejes Temáticos del Concurso</h2>
     <p>Selecciona un eje para empezar a estudiar. ¡Recuerda que la prueba es el 14 de septiembre de 2025!</p>
     <p>La calificación mínima para aprobar la prueba de Competencias Funcionales es de 65.00 puntos, con un peso del 60% en la evaluación final.</p>
@@ -45,6 +45,14 @@
         <li>
             <a href="temas/tecnologias_informacion_comunicaciones/tecnologias_informacion_comunicaciones.html">Tecnologías de la Información y Comunicaciones (TICS)</a>
             <div id="historial-tecnologias-informacion-comunicaciones" class="historial-resumen"></div>
+        </li>
+        <li>
+            <a href="temas/plan_estrategico_peti/plan_estrategico_peti.html">Plan Estratégico de Tecnologías de la Información - PETI</a>
+            <div id="historial-plan-estrategico-peti" class="historial-resumen"></div>
+        </li>
+        <li>
+            <a href="temas/formulacion_proyectos_informaticos/formulacion_proyectos_informaticos.html">Formulación de Planes, Programas y Proyectos Informáticos</a>
+            <div id="historial-formulacion-proyectos-informaticos" class="historial-resumen"></div>
         </li>
         </ul>
 </section>
