--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
- <section id="ejes-tematicos">
+<section id="ejes-tematicos">
     <h2>Ejes Temáticos del Concurso</h2>
     <p>Selecciona un eje para empezar a estudiar. ¡Recuerda que la prueba es el 14 de septiembre de 2025!</p>
     <p>La calificación mínima para aprobar la prueba de Competencias Funcionales es de 65.00 puntos, con un peso del 60% en la evaluación final.</p>
@@ -53,6 +53,10 @@
         <li>
             <a href="temas/formulacion_proyectos_informaticos/formulacion_proyectos_informaticos.html">Formulación de Planes, Programas y Proyectos Informáticos</a>
             <div id="historial-formulacion-proyectos-informaticos" class="historial-resumen"></div>
+        </li>
+        <li>
+            <a href="temas/razonamiento_analitico/razonamiento_analitico.html">Razonamiento Analítico</a>
+            <div id="historial-razonamiento-analitico" class="historial-resumen"></div>
         </li>
         </ul>
 </section>
