--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
             <a href="temas/razonamiento_analitico/razonamiento_analitico.html">Razonamiento Analítico</a>
             <div id="historial-razonamiento-analitico" class="historial-resumen"></div>
         </li>
+        <li>
+            <a href="temas/normatividad_tic/normatividad_tic.html">Normatividad de Tecnologías de la Información y Comunicaciones (TIC)</a>
+            <div id="historial-normatividad-tic" class="historial-resumen"></div>
+        </li>
         </ul>
 </section>
 
