--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
             <a href="temas/normatividad_tic/normatividad_tic.html">Normatividad de Tecnologías de la Información y Comunicaciones (TIC)</a>
             <div id="historial-normatividad-tic" class="historial-resumen"></div>
         </li>
+        <li>
+            <a href="temas/administracion_bienes/administracion_bienes.html">Administración y Gestión de Bienes Muebles y Almacén</a>
+            <div id="historial-administracion-bienes" class="historial-resumen"></div>
+        </li>
+        <li>
+            <a href="temas/aporte_tecnico/aporte_tecnico.html">Aporte Técnico - Profesional</a>
+            <div id="historial-aporte-tecnico" class="historial-resumen"></div>
+        </li>
         </ul>
 </section>
 
